--- a/mobile-style.css
+++ b/mobile-style.css
@@ -62,29 +62,61 @@
     border-radius: 5%;
     text-align: center;
     padding: 4px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    margin-left: 5px;
-    height: 30px;
-    width: 30%;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    margin-left: 0px;
+    margin-right: 5px;
+    height: 35px;
+    width: 48%;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+  }
+
+  .apply img {
+    width: 100px;
   }
 
   .apply:hover,
   .turington:hover {
     background-color: #3f5efb;
-    padding: 6px;
+    padding: 4px;
   }
 
   .apply-here a {
     font-size: 20px;
+    font-weight: 600;
     color: #3f5efb;
     text-decoration: none;
   }
 
   .apply-here a:hover {
-    font-size: 30px;
+    font-size: 25px;
     color: white;
+  }
+
+  #devfolio-apply-now {
+    display: flex;
+    -ms-flex-align: center;
+    -webkit-box-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: #3770ff;
+    border-radius: 3px;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    height: 50px;
+    padding: 6px;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    font-size: 16px;
+    font-weight: 600;
+    /* padding: 8px 16px; */
+    text-align: center;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
   }
 
   .icons {
@@ -190,6 +222,42 @@
     font-size: 1rem;
   }
 
+  .themes-section {
+    height: 200vh;
+    margin-top: 0;
+    margin-bottom: 50px;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+  }
+
+  .themes-section h1 {
+    margin-bottom: 40px;
+  }
+
+  .theme-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .theme-card {
+    width: 210px;
+    height: 220px;
+    margin: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 2%;
+    border: 1.5px lightgray solid;
+    background-color: #eeeeee;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+  }
+
   .event-schedule {
     margin-top: 20px;
   }
@@ -201,6 +269,7 @@
   .schedule-section-section {
     position: absolute;
     display: flex;
+    align-items: center;
     flex-direction: column;
     height: 100vh;
     width: 95%;
@@ -318,19 +387,19 @@
 
   .event-card {
     width: 100%;
-    height: 10vh;
+    height: 9vh;
     border: 1px gray solid;
   }
 
   .event-card h2 {
     color: white;
-    font-size: 20px;
+    font-size: 22px;
     font-family: Poppins;
   }
 
   .ad-event-card {
     width: 100%;
-    height: 10vh;
+    height: 9vh;
     border: 1px gray solid;
   }
 
@@ -338,6 +407,16 @@
     color: white;
     font-size: 20px;
     font-family: Poppins;
+  }
+
+  .events-section-section {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    height: 90vh;
+    width: 100%;
+    bottom: 0;
+    background-color: white;
   }
 
   .sponsors-section {
@@ -356,7 +435,16 @@
   }
 
   .sponsors-list {
-    height: 60vh;
+    height: 120vh;
+  }
+
+  .sponsors-list-list {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .sponsors-list-list h5 {
+    font-size: 20px;
   }
 
   .mentors {
@@ -369,13 +457,13 @@
   }
 
   .mentors-list {
-    height: 40vh;
+    height: 80vh;
     width: 100%;
     background-color: lightgrey;
   }
 
   .faq-section {
-    height: 70vh;
+    height: 100vh;
   }
 
   .faq-section-section {
@@ -389,18 +477,25 @@
   }
 
   .faqs-list {
-    height: 65vh;
+    height: 90vh;
     margin-bottom: 10px;
   }
 
   footer {
-    height: 60vh;
-    font-size: 1rem;
+    height: 30vh;
+    font-size: 0.9rem;
     background-color: #212529;
   }
 
+  .footer-contact {
+    display: flex;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
   footer h4 {
-    padding: 10px;
+    padding: 5px;
+    margin-bottom: 10px;
   }
 
   footer h4 i {
