--- a/style.css
+++ b/style.css
@@ -67,6 +67,38 @@ body {
   z-index: 0;
 }
 
+#devfolio-apply-now {
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+  align-items: center;
+  background-color: #3770ff;
+  border-radius: 3px;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  height: 50px;
+  padding: 6px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  /* padding: 8px 16px; */
+  text-align: center;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+}
+
+#devfolio-apply-now:not([disabled]) {
+  cursor: pointer;
+}
+
+#devfolio-apply-now:hover {
+  background-color: #2954bf !important;
+}
+
 .apply,
 .turington {
   background-color: white;
@@ -75,8 +107,8 @@ body {
   padding: 6px;
   margin-top: 15px;
   margin-bottom: 15px;
-  margin-left: 5px;
-  height: 45px;
+  margin-left: 10px;
+  height: 50px;
   width: 30%;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
 }
@@ -100,7 +132,7 @@ body {
 }
 
 .apply-here a:hover {
-  font-size: 30px;
+  font-size: 27px;
   color: white;
 }
 
@@ -220,6 +252,50 @@ body {
   font-size: 1.5rem;
 }
 
+.themes-section {
+  height: 120vh;
+  margin-top: 0;
+  margin-bottom: 50px;
+  background: white;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.themes-section h1 {
+  font-family: Poppins;
+  margin-bottom: 40px;
+}
+
+.theme-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.theme-card {
+  width: 400px;
+  height: 360px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 2%;
+  border: 1.5px lightgray solid;
+  background-color: #eeeeee;
+  box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+}
+
+.theme-card i {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
 .event-schedule {
   margin-top: 50px;
 }
@@ -239,7 +315,7 @@ body {
 .section-1 {
   width: 50%;
   margin: 30px;
-  margin-top: 65px;
+  margin-top: 85px;
 }
 
 .section-1 h2 {
@@ -250,7 +326,7 @@ body {
 .partition {
   padding: 0;
   margin-top: 125px;
-  margin-bottom: 25px;
+  margin-bottom: 75px;
   width: 0;
   border-left: 2px black solid;
 }
@@ -258,7 +334,7 @@ body {
 .section-2 {
   width: 50%;
   margin: 30px;
-  margin-top: 65px;
+  margin-top: 85px;
 }
 
 .section-2 h2 {
@@ -456,7 +532,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 65vh;
+  height: 85vh;
   width: 100%;
   margin-bottom: 50px;
   background-color: lightgrey;
@@ -478,12 +554,21 @@ footer h4 {
 }
 
 footer h4 i {
-  color: red;
+  color: blue;
 }
 
 footer h4 a {
   color: white;
   text-decoration: none;
+}
+
+.footer-contact {
+  display: flex;
+  text-align: center;
+}
+
+footer h4 a span {
+  text-decoration: underline;
 }
 
 .card-clock {
