--- a/style.css
+++ b/style.css
@@ -67,36 +67,32 @@ body {
   z-index: 0;
 }
 
-#devfolio-apply-now {
-  -ms-flex-align: center;
-  -webkit-box-align: center;
-  align-items: center;
-  background-color: #3770ff;
-  border-radius: 3px;
-  border: none;
-  color: #ffffff;
-  cursor: pointer;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  height: 50px;
-  padding: 6px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  margin-left: 5px;
-  font-size: 16px;
-  font-weight: 600;
-  /* padding: 8px 16px; */
-  text-align: center;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+##devfolio-apply-now {
+    -ms-flex-align: center;
+    -webkit-box-align: center;
+    align-items: center;
+    background-color: #3770FF;
+    border-radius: 3px;
+    border: none;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-size: 18px;
+    font-weight: 600;
+    padding: 12px 20px;
+    text-align: center;
+    text-transform: lowercase;
 }
 
 #devfolio-apply-now:not([disabled]) {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 #devfolio-apply-now:hover {
-  background-color: #2954bf !important;
+    background-color: #2954BF !important;
 }
 
 .apply,
