--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 65%;
+  margin-bottom: 30px;
 }
 
 .countdown li {
@@ -169,6 +170,30 @@ body {
   font-size: 40px;
 }
 
+.prize {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.prize-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  width: 250px;
+  height: 75px;
+  margin: 20px;
+  margin-bottom: 0;
+  border-radius: 2%;
+  border: 1px lightgray solid;
+  background: linear-gradient(to right, #36d1dc, #5b86e5);
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
+}
+
 .cards {
   display: flex;
   margin-top: 40px;
@@ -178,6 +203,7 @@ body {
   width: 300px;
   height: 380px;
   margin: 30px;
+  margin-top: 20px;
   margin-bottom: 40px;
   display: flex;
   flex-direction: column;
