--- a/style.css
+++ b/style.css
@@ -434,6 +434,10 @@ body {
   font-family: Poppins;
 }
 
+.event-card a {
+  text-decoration: none;
+}
+
 .sponsors-section {
   display: flex;
   justify-content: center;
